@@ -1,5 +1,8 @@
 <?php /* #?ini charset="utf-8"?
 
+[FormmakerSettings]
+SendOnlyFilledData=false
+
 [AdditionalElements]
 description=enabled
 css=enabled
