@@ -18,6 +18,7 @@ Version 1.3
 - Added possibility to set intro and body text which are displayed on receipt page
 - Fixed bug with the duplicated labels
 - Following elements can be enabled/disabled in formmaker.ini: description, css class and default values
+- Added possibility to send only filled in data (excluding checkboxes)
 
 Version 1.2
 - Added possibility to split the from into parts (attribute "page separator")
